src/test/deca/syntax/valid/without_class/two_consecutive_backslashes.deca
// Description :
//    test de la détection de deux backslashes consécutifs dans une chaîne de caractère
//
// Resultats :
//    ok
//
// Historique:
//    cree le 06/01/2023

{
    print("Vive \\\\Deca\\\\");
}